--- a/.github/workflows/flw.yml
+++ b/.github/workflows/flw.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-        FL_flwURL: ${{ secrets.FL_flwURL }}
-        FL_flwHEADER: ${{ secrets.FL_flwHEADER }}		
-        FL_flwspBODY: ${{ secrets.FL_flwspBODY }}	
-        FL_flwqwBODY: ${{ secrets.FL_flwqwBODY }}        
+        FL_flwURL: ${{ secrets.FL_FLWURL }}
+        FL_flwHEADER: ${{ secrets.FL_FLWHEADER }}		
+        FL_flwspBODY: ${{ secrets.FL_FLWSPBODY }}	
+        FL_flwqwBODY: ${{ secrets.FL_FLWQWBODY }}        
         FL_CASH: ${{ secrets.FL_CASH }}
     steps:
       - name: Checkout
