--- a/.github/workflows/GitHub_Actions_pull.yml
+++ b/.github/workflows/GitHub_Actions_pull.yml
@@ -6,6 +6,8 @@ on:
       - master
   schedule:
    - cron: '0,30 * * * *'
+  watch:
+    types: started
 jobs:
   jdbot_pull:
     runs-on: ubuntu-latest
@@ -30,3 +32,7 @@ jobs:
           git config --local user.name "GitHub Action"
           git add .
           git commit -m "$(date +%Y%m%d%H%M%S)" -a
+      - name: 'Push changes'
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.TOKEN }}
