--- a/.github/workflows/GitHub_Actions_pull.yml
+++ b/.github/workflows/GitHub_Actions_pull.yml
@@ -36,3 +36,9 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.TOKEN }}
+      - name: 'Create a Release'
+        uses: elgohr/Github-Release-Action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        with:
+          args: scripts
