--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
   schedule:
-   - cron: '0,30 * * * *'
+   - cron: '30 0-10 * * *'
   workflow_dispatch:
   watch:
     types: started   
